Updated tag controller
